welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ')' expected but '=' found.
if("A"=test)
      ^BDRBuggle:43: error: illegal start of simple expression
	}
        ^